tegime delete methodi

--- a/TallinnaRakenduslikKolledz/Views/Students/Create.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Students/Create.cshtml
@@ -31,9 +31,9 @@
             </div>
 
              <div class="form-group">
-                <label asp-for="Tracks" class="control-label"></label>
-                <input asp-for="Tracks" class="form-control" />
-                <span asp-validation-for="Tracks" class="text-danger"></span>
+                <label asp-for="Sleepy" class="control-label"></label>
+                <input asp-for="Sleepy" class="form-control" />
+                <span asp-validation-for="Sleepy" class="text-danger"></span>
             </div>
 
             <div class="form-group">
