--- a/TallinnaRakenduslikKolledz/Views/Students/Delete.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Students/Delete.cshtml
@@ -55,12 +55,14 @@
 
 	}
 
-
-
 </div>
 
 <form asp-action="Delete">
 	<input type="hidden" asp-for="Id"/>
 	<input type="submit" value="Kustuta õpilane" class="btn btn-danger"/> | <a asp-></a>
+</form>
+
+<form asp-action="Index">
+	<input type="submit" value="Tagasi loendisse" class="btn btn-primary" />
 </form>
 
