--- a/TallinnaRakenduslikKolledz/Views/Students/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Students/Index.cshtml
@@ -43,6 +43,7 @@
 					<a asp-action="Edit" asp-route-id="@student.Id">Muuda</a>
 					<a asp-action="Details" asp-route-id="@student.Id">Vaata</a>
 					<a asp-action="Delete" asp-route-id="@student.Id">Kustuta</a>
+					<a asp-action="Clone" asp-route-id="@student.Id">Kloneeri</a>
 				</td>
 			</tr>
 		}
