Fixed error, temporarily commented out courseassignments

--- a/TallinnaRakenduslikKolledz/Views/Instructors/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Instructors/Index.cshtml
@@ -15,9 +15,9 @@
 			<th>Perekonnanimi</th>
 			<th>Eesnimi</th>
 			<th>Töölevõtukuupäev</th>
-			<th>Kabinet</th>
-			<th>Kursused</th>
-			<th>Vangis olnud?</th>
+			<th>Telefoninumber</th>
+			<th>Alkohoolik</th>
+			<th>Vangis olnud</th>
 			<th>🛠Tööriistad</th>
 		</tr>
 	</thead>
