Added Department model, view and controller

--- a/TallinnaRakenduslikKolledz/Views/Instructors/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Instructors/Index.cshtml
@@ -49,7 +49,7 @@
 				</td>
 				<td>@Html.DisplayFor(modelItem => instructor.BeenInJail)</td>
 				<td>
-					<a asp-action="Edit" asp-route-id="@instructor.ID">Muuda</a>
+					<a asp-action="QuickAction" asp-route-id="@instructor.ID">Muuda</a>
 					<a asp-action="Details" asp-route-id="@instructor.ID">Vaata</a>
 					<a asp-action="Delete" asp-route-id="@instructor.ID">Kustuta</a>
 				</td>
