--- a/TallinnaRakenduslikKolledz/Views/Instructors/QuickAction.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Instructors/QuickAction.cshtml
@@ -1,24 +1,25 @@
 ﻿@model TallinnaRakenduslikKolledz.Models.Instructor
 
 @{
-	ViewData["Title"] = "Muuda õpetaja andmed";
+	ViewData["Title"] = "Kiirvalik";
 }
-<h1>Muuda õpetaja andmed</h1>
+
+<h1>Kiirvalik</h1>
 <hr />
 <div class=="row">
 	<div class="col-md-4">
-		<form asp-action="Edit">
+		<form asp-action="QuickAction">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 			<div class="form-group">
 				<label asp-for="LastName" class="control-label"></label>
-				<input asp-for="LastName" class="form-control" />
+				<input asp-for="LastName" class="form-control"></input>
 				<span asp-validation-for="LastName" class="text-danger"></span>
 			</div>
 
 			<div class="form-group">
 				<label asp-for="FirstName" class="control-label"></label>
-				<input asp-for="FirstName" class="form-control" />
+				<input asp-for="FirstName" class="form-control"></input>
 				<span asp-validation-for="FirstName" class="text-danger"></span>
 			</div>
 
@@ -29,26 +30,25 @@
 			</div>
 
 			<div class="form-group">
+				<select class="form-select" asp-for="status">
+					<option value="Status.Employed">Töötab</option>
+					<option value="Status.SickLeave">Sinine leht</option>
+					<option value="Status.ParentalLeave">Haiguslehel</option>
+					<option value="Status.Fired">Vallandatud</option>
+					<span asp-validation-for="status" class="form-select"></span>
+				</select>
+			</div>
+
+			<div class="form-group">
 				<label asp-for="PhoneNumber" class="control-label"></label>
-				<input asp-for="PhoneNumber" class="form-control" />
+				<input asp-for="PhoneNumber" class="form-control"></input>
 				<span asp-validation-for="PhoneNumber" class="text-danger"></span>
-			</div>
-
-			<div class="form-group">
-				<label asp-for="Alcoholic" class="control-label"></label>
-				<input asp-for="Alcoholic" class="form-control" />
-				<span asp-validation-for="Alcoholic" class="text-danger"></span>
-			</div>
-
-			<div class="form-group">
-				<label asp-for="BeenInJail" class="control-label"></label>
-				<input asp-for="BeenInJail" class="form-control" />
-				<span asp-validation-for="BeenInJail" class="text-danger"></span>
 			</div>
 
 			<div class="form-group">
 				<input type="submit" value="Muuda" class="btn btn-primary" />
 			</div>
+
 
 		</form>
 	</div>
