--- a/TallinnaRakenduslikKolledz/Views/Courses/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Courses/Index.cshtml
@@ -15,7 +15,7 @@
 			<th>@Html.DisplayNameFor(model => model.Title)</th>
 			<th>@Html.DisplayNameFor(model => model.Credits)</th>
 			<th>@Html.DisplayNameFor(model => model.Department.Name)</th>
-			<th>@Html.DisplayNameFor(model => model.Department.Administrator.FullName)</th>
+			@*<th>@Html.DisplayNameFor(model => model.Department.Administrator.FullName)</th> *@
 			<th>Tööriistad</th>
 		</tr>
 	</thead>
@@ -23,26 +23,30 @@
 		@foreach (var course in Model)
 		{
 			<tr>
-				@Html.DisplayFor(modelItem => course.CourseId)
-			</tr>
+				<td>
+					@Html.DisplayFor(modelItem => course.CourseId)
+				</td>
 
-			<tr>
-				@Html.DisplayFor(modelItem => course.Title)
-			</tr>
+				<td>
+					@Html.DisplayFor(modelItem => course.Title)
+				</td>
 
-			<tr>
-				@Html.DisplayFor(modelItem => course.Credits)
-			</tr>
+				<td>
+					@Html.DisplayFor(modelItem => course.Credits)
+				</td>
 
-			<tr>
-				@Html.DisplayFor(modelItem => course.Department.Name)
-			</tr>
+				<td>
+					@Html.DisplayFor(modelItem => course.Department.Name)
+				</td>
 
-			<tr>
-				@Html.DisplayFor(modelItem => course.Department.Administrator.FullName)
-			</tr>
-			<tr>
-				<a asp-action="Delete" asp-route-id="@course.CourseId">Kustuta</a>
+				@* <td>
+					@Html.DisplayFor(modelItem => course.Department.Administrator.FullName)
+				</td>*@
+				<td>
+					<a asp-action="Delete" asp-route-id="@course.CourseId">Kustuta</a>
+					<a asp-action="Details" asp-route-id="@course.CourseId">Vaata</a>
+				</td>
+				
 			</tr>
 		}
 	</tbody>
