--- a/TallinnaRakenduslikKolledz/Views/Departments/Create.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Departments/Create.cshtml
@@ -72,14 +72,14 @@
 else
 {
 
-<h1>Muuda @Html.DisplayNameFor(model => model.Name)</h1>
+<h1>Muuda </h1>
 <div>
 	<h1>Muuda osakonna andmed</h1>
 	<hr />
-	<div class= ="row">
+	<div class="row">
 		<div class="col-md-4">
 				<form asp-action="ConfirmEdit">
-					<input type="hidden" asp-for="RawVersion" value="@Html.Raw("0")" />
+					<input type="hidden" asp-for="RawVersion" value="@Html.Raw(Model.DepartmentID)" />
 					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 					<div class="form-group">
