--- a/TallinnaRakenduslikKolledz/Views/Courses/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Courses/Index.cshtml
@@ -45,6 +45,7 @@
 				<td>
 					<a asp-action="Delete" asp-route-id="@course.CourseId">Kustuta</a>
 					<a asp-action="Details" asp-route-id="@course.CourseId">Vaata</a>
+					<a asp-action="Edit" asp-route-id="@course.CourseId">Muuda</a>
 				</td>
 				
 			</tr>
