--- a/TallinnaRakenduslikKolledz/Views/Shared/_Layout.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Deliquents" asp-action="Index">Deliquents</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         
