--- a/TallinnaRakenduslikKolledz/Views/Delinquents/Index.cshtml
+++ b/TallinnaRakenduslikKolledz/Views/Delinquents/Index.cshtml
@@ -52,7 +52,7 @@
 				<td>
 					<a asp-action="Delete" asp-route-id="@delinquent.DelinquentID">Kustuta</a>
 					<a asp-action="Details" asp-route-id="@delinquent.DelinquentID">Vaata</a>
-					<a asp-action="Muuda" asp-route-id="@delinquent.DelinquentID">Muuda</a>
+					<a asp-action="Edit" asp-route-id="@delinquent.DelinquentID">Muuda</a>
 				</td>
 
 			</tr>
